...
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:divider="@color/md_theme_outlineVariant"
        android:dividerHeight="1dp"
        android:focusable="true"
        android:listSelector="@drawable/list_item_selector"
        android:nextFocusRight="@id/contentList"
        android:nextFocusUp="@id/searchButton"
        android:padding="8dp"
        android:scrollbars="none"
        tools:listitem="@layout/list_element"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline30"
...
